feat: add password change feature
- Added ChangePasswordRequest and ForgotPasswordRequest DTOs
- Implemented password change functionality in AuthService
- Added JWT service updates for token handling
- Created custom exceptions for password validation
- Updated authentication controller and response DTO
- Added error constants and messages
- Updated JWT filter and utilities
- Added global exception handling for new exceptions

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -3,6 +3,7 @@ notempty={0} cannot be empty
 notnull={0} cannot be null
 pattern={0} pattern did not match
 size={0} size must be between {1} and {2}
+valid=Please provide a valid {0}
 success.fetch={0} has been fetched successfully.
 success.create={0} has been created successfully.
 success.delete={0} has been deleted successfully.
@@ -15,4 +16,9 @@ forbidden=Forbidden
 unauthorized=Unauthorized
 validation.error=Validation Error
 login=Login
+logout=Logout
 success={0} success
+user=User
+password=Password
+password.change.invalid.current=Current {0} is incorrect
+password.change.mismatch=New and confirm {0} do not match
