feat: setup for address(country,province,district,localbody), and implement flyway migration setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ app.jwt.secret=A0r4f6l1Xvn7SFRvvv1WebszoN1pG57YPOP/obqyOdY=
 app.jwt.expiration=86400000
 
 spring.jpa.show-sql=true
+
+spring.flyway.enabled=false
