--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -22,3 +22,8 @@ user=User
 password=Password
 password.change.invalid.current=Current {0} is incorrect
 password.change.mismatch=New and confirm {0} do not match
+country=Country
+province=Province
+district=District
+local.body=Local Body
+enum=Enum
