--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,26 @@
 spring.application.name=template
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/template
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
 #################################################################
+# JWT
 app.jwt.secret=A0r4f6l1Xvn7SFRvvv1WebszoN1pG57YPOP/obqyOdY=
 app.jwt.expiration=86400000
-
+#################################################################
 spring.jpa.show-sql=true
-
+#################################################################
+# Flyway
 spring.flyway.enabled=false
+#################################################################
+# MyBatis mapper locations
+mybatis-plus.mapper-locations=classpath*:mybatis/**/*.xml
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.configuration.map-underscore-to-camel-case=false
+#################################################################
+# Logging
+logging.level.org.apache.ibatis=DEBUG
+logging.level.org.mybatis=DEBUG
+logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
